--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -22,3 +22,9 @@ playbackRange:
 playbackRangeInfo:
   en: "From {from, select, start {the beginning} other {timecode {from}}} to {to, select, end {the end} other {timecode {to}}}"
   de: "Von {from, select, start {Anfang} other {Time-Code {from}}} bis {to, select, end {Ende} other {Time-Code {to}}}"
+startTimecode:
+  en: Start time
+  de: Startzeit
+duration:
+  en: Duration
+  de: Zeitdauer
