--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -21,5 +21,5 @@ resetInProgressNextSteps:
     Falls die von Ihnen angegebene E-Mail-Adresse bei uns registriert ist, werden Sie in Kürze eine
     Nachricht von uns erhalten mit den nächsten Schritte, um ein neues Kennwort zu generieren.
 redirectMessage:
-  en: You will be redirected to the <0>logon page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
+  en: You will be redirected to the <0>login page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
   de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
