--- a/src/components/pages/complete-password-reset.yml
+++ b/src/components/pages/complete-password-reset.yml
@@ -5,7 +5,7 @@ passwordChangedSuccessfully:
   en: Your password was changed successfully.
   de: Ihr Kennwort wurde erfolgreich geändert.
 redirectMessage:
-  en: You will be redirected to the <0>logon page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
+  en: You will be redirected to the <0>login page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
   de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
 passwordResetFailure:
   en: The password reset code is invalid or expired.
