EDU-553 Show correct type for folders in file-list-viewer

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -381,6 +381,9 @@ resource_none:
 resource_unknown:
   en: Unknown
   de: Unbekannt
+folder:
+  en: Folder
+  de: Verzeichnis
 pageCount:
   en: Page count
   de: Seitenanzahl
