EDU-575 Add playback speed options

--- a/src/components/media-player-controls.yml
+++ b/src/components/media-player-controls.yml
@@ -1,3 +1,9 @@
 download:
   en: Download
   de: Herunterladen
+playbackSpeed:
+  en: Playback speed
+  de: Wiedergabegeschwindigkeit
+normal:
+  en: normal
+  de: Normal
