EDU-575 Add support to change playback rate

--- a/src/components/media-player-controls.yml
+++ b/src/components/media-player-controls.yml
@@ -1,9 +1,9 @@
 download:
   en: Download
   de: Herunterladen
-playbackSpeed:
-  en: Playback speed
-  de: Wiedergabegeschwindigkeit
+playbackRate:
+  en: Speed
+  de: Geschwindigkeit
 normal:
   en: normal
   de: Normal
