EDU-587 Support answer deletion and correct default translated values

--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -4,21 +4,9 @@ name:
 determiningDuration:
   en: Determining media duration ...
   de: Mediendauer wird ermittelt ...
-defaultChapterTitle:
-  en: |
-    [Chapter]
-  de: |
-    [Kapitel]
-defaultChapterQuestion:
-  en: |
-    [Question]
-  de: |
-    [Frage]
-defaultChapterAnswer:
-  en: |
-    [Answer]
-  de: |
-    [Antwort]
+chapter:
+  en: Chapter
+  de: Kapitel
 editChapter:
   en: Edit chapter
   de: Kapitel bearbeiten
