EDU-589 Keep track of user answers

--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -40,3 +40,12 @@ addAnswer:
 markCorrectAnswer:
   en: Mark as correct answer
   de: Als richtige Antwort markieren
+continue:
+  en: continue
+  de: fortfahren
+replay:
+  en: replay
+  de: wieder spielen
+reset:
+  en: reset
+  de: zurücksetzen
