--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -60,4 +60,4 @@ currentProgress:
   de: Dein aktueller Fortschritt
 resultsSummary:
   en: "{answerCount} out of {totalCount} answered, out of which {correctCount} correctly and {incorrectCount} incorrectly."
-  de: "{answerCount} von {totalCount} Fragen beantwortet, aus denen {correctCount} richtig und {incorrectCount} falsch."
+  de: "{answerCount} von {totalCount} Fragen beantwortet, davon {correctCount} richtig und {incorrectCount} falsch."
