--- a/src/components/pages/docs.yml
+++ b/src/components/pages/docs.yml
@@ -10,3 +10,9 @@ originInternal:
 originExternal:
   en: external
   de: extern
+initialAuthor:
+  en: Initial author
+  de: Erstautor
+filterPlaceholder:
+  en: Filter by title or initial author
+  de: Nach Titel oder Erstautor filtern
