EDU-596 Show either storage usage or warning under files viewer

--- a/src/components/storage-location.yml
+++ b/src/components/storage-location.yml
@@ -4,3 +4,6 @@ filesView_list:
 filesView_grid:
   en: Grid
   de: Grid
+publicStorageWarning:
+  en: This directory is publicly accessible
+  de: Dieses Verzeichnis ist öffentlich zugänglich
