--- a/src/components/storage-location.yml
+++ b/src/components/storage-location.yml
@@ -10,3 +10,18 @@ publicStorageWarning:
 uploadFiles:
   en: Upload files
   de: Dateien hochladen
+uploading:
+  en: Uploading {count, plural, =1 {file} other {files}}
+  de: Datei{count, plural, =1 {} other {en}}-Upload
+successfullyUploaded:
+  en: File{count, plural, =1 {} other {s}} succesfully uploaded
+  de: Datei{count, plural, =1 {} other {en}} erfolgreig hochgeladen
+uploadLimitExceeded:
+  en: Upload limit of {uploadLimit} is exceeded. Your upload size is {uploadSize}.
+  de: Uploadbegrenzung von {uploadLimit} ist überschritten. Ihre Uploadgröße ist {uploadSize}.
+optimizeImages:
+  en: Optimize images for web display
+  de: Bilder für Web optimieren
+insufficientPrivateStorge:
+  en: Not enough storage space available
+  de: Nicht genügend Speicherplatz verfügbar
