EDU-608 Create task processor to create all necessary upload folders

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -28,6 +28,12 @@ cdnResourcesConsolidationHeader:
 cdnResourcesConsolidationButton:
   en: Consolidate CDN resources
   de: CDN-Ressourcen konsolidieren
+cdnUploadDirectoryCreationHeader:
+  en: CDN upload directory creation
+  de: Erstellung der CDN-Upload-Verzeichnisse
+cdnUploadDirectoryCreationButton:
+  en: Create CDN upload directories
+  de: CDN-Upload-Verzeichnisse erstellen
 templateDocumentHeader:
   en: Template for new documents
   de: Vorlage für neue Dokumente
