EDU-621 Storage browser final touchups

--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "debounce": "^1.2.1",
     "decompress": "^4.2.1",
     "del": "^6.0.0",
-    "dropperx": "^1.0.1",
     "escape-string-regexp": "^5.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -91,6 +90,7 @@
     "react-cool-dimensions": "^2.0.7",
     "react-countdown": "^2.3.2",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^14.2.1",
     "react-highlighter": "^0.4.3",
     "react-i18next": "^11.12.0",
     "react-pdf": "^5.7.1",
