--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -27,7 +27,7 @@ deleteRoomInvitationConfirmation:
   de: Möchten Sie die Raumeinladung für "{invitationEmail}" wirklich widerrufen?
 deleteLessonConfirmation:
   en: Do you really want to delete lesson "{lessonName}"?
-  de: Möchten Sie die Unterrichtseinheit "{lessonName}" wirklich löschen?
+  de: Möchten Sie die Einheit "{lessonName}" wirklich löschen?
 deleteCdnDocumentConfirmation:
   en: Do you really want to delete the CDN file "{fileName}"?
   de: Möchten Sie die Datei "{fileName}" wirklich vom CDN löschen?
