EDU-614 Revert accidentally left in changes

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -34,6 +34,9 @@ lessonsPlaceholder:
 thisWeek:
   en: This week
   de: Diese Woche
+notScheduled:
+  en: not scheduled
+  de: nicht terminiert
 deleteRoomButton:
   en: Delete room
   de: Raum löschen
