--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "escape-string-regexp": "^5.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-basic-auth": "^1.2.1",
     "express-joi-validation": "^5.0.0",
     "express-session": "^1.17.2",
     "express-useragent": "^1.0.15",
