--- a/src/plugins/quick-tester/quick-tester.yml
+++ b/src/plugins/quick-tester/quick-tester.yml
@@ -22,3 +22,9 @@ testsOrderRandom:
 renderMediaInfo:
   en: Will be applied to the question and answer text, not the link text and title
   de: Bezieht sich nur auf den Fragen- und Antworttext, nicht auf den Link-Text und Titel
+testNumber:
+  en: Test {number}
+  de: Test {number}
+addTest:
+  en: Add test
+  de: Test hinzufügen
