EDU-638 Update markdown help dialog text

--- a/src/components/markdown-help.yml
+++ b/src/components/markdown-help.yml
@@ -17,8 +17,8 @@ blockTooltipText:
   en: Please click in order to show formatting options for this field
   de: Bitte klicken, um Formatierungsoptionen für dieses Feld anzuzeigen
 blockHelpTableHeaderLeft:
-  en: What you write
-  de: Was Sie schreiben
+  en: How you write it
+  de: Wie Sie es schreiben
 blockHelpTableHeaderRight:
   en: How it will look
   de: Wie es dargestellt wird
