EDU-654 Update dev tools to v3.0.0

--- a/.eslintrc
+++ b/.eslintrc
@@ -79,6 +79,7 @@
     "wrap-iife": ["error", "inside"],
     "import/extensions": ["error", "ignorePackages"],
     "import/no-named-as-default-member": ["off"],
+    "import/no-unresolved": ["error", { "ignore": ["^vitest/config$"] }],
     "react/destructuring-assignment": ["off"],
     "react/forbid-component-props": ["off"],
     "react/forbid-prop-types": ["off"],
