EDU-647 Adjust dashboard styles slightly and add info card

--- a/src/components/favorites-tab.yml
+++ b/src/components/favorites-tab.yml
@@ -7,3 +7,6 @@ setOn:
 sortedBySetOn:
   en: Sorted by date of adding
   de: Nach Hinzufügungsdatum sortiert
+info:
+  en: All documents, rooms and lessons that you have marked as favorite can be found here.
+  de: Alle als Favorit markierte Dokumente, Räume oder Einheiten könnten hier gefunden werden.
