EDU-647 Phrase info texts

--- a/src/components/account-tab.yml
+++ b/src/components/account-tab.yml
@@ -1,3 +1,6 @@
+info:
+  en: Here you can change your account information as well as close your account.
+  de: Hier können Sie Ihre Konto-Informationen bearbeiten sowie Ihr Konto schließen.
 resetPassword:
   en: Reset password
   de: Kennwort wiederherstellen
