--- a/src/components/news-tab.yml
+++ b/src/components/news-tab.yml
@@ -1,9 +1,9 @@
 info:
-  en: Here you can find useful new information about the project and your interaction with it
-  de: Here you can find useful new information about the project and your interaction with it
+  en: Here you can find news about the website and your latest activities.
+  de: Hier finden Sie Neuigkeiten über die Website und Ihre letzten Aktivitäten.
 latestActivitiesHeader:
   en: Your latest activities
-  de: Deine letzte Aktivitäten
+  de: Deine letzten Aktivitäten
 documentCreatedActivity:
   en: New document created
   de: Neues Dokument erstellt
