--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -15,10 +15,10 @@ roomsTabTitle:
   de: Räume
 storageTabTitle:
   en: Your storage plan
-  de: Deiner Speicherplan
+  de: Ihr Speicherplan
 storageTabInfo:
   en: Here you can find details about your storage plan and current space status.
-  de: Hier findest du Details über ...
+  de: Hier finden Sie Details über Ihren Speicherplan und Ihre aktuelle Speichernutzung.
 noStoragePlan:
   en: There is no storage plan associated with your account
   de: Keiner Speicherplan ist mit Ihrem verbunden
