--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -57,7 +57,7 @@ results:
   de: Ergebnisse
 currentProgress:
   en: Your current progress
-  de: Dein aktueller Fortschritt
+  de: Ihr aktueller Fortschritt
 resultsSummary:
   en: "{answerCount} out of {totalCount} answered, out of which {correctCount} correctly and {incorrectCount} incorrectly."
   de: "{answerCount} von {totalCount} Fragen beantwortet, davon {correctCount} richtig und {incorrectCount} falsch."
