--- a/src/components/favorites-tab.yml
+++ b/src/components/favorites-tab.yml
@@ -8,5 +8,5 @@ sortedBySetOn:
   en: Sorted by date of adding
   de: Nach Hinzufügungsdatum sortiert
 info:
-  en: All documents, rooms and lessons that you have marked as favorite can be found here.
-  de: Alle als Favorit markierte Dokumente, Räume oder Einheiten könnten hier gefunden werden.
+  en: Here you can find all documents, rooms and lessons that you have marked as favorite.
+  de: Hier finden Sie alle Dokumente, Räume und Einheiten, die Sie als Favorit markiert haben.
