--- a/src/components/profile-tab.yml
+++ b/src/components/profile-tab.yml
@@ -1,3 +1,6 @@
+info:
+  en: Here you can provide additional information about yourself. This information is currently not publicly accessible.
+  de: Hier können Sie zusätzliche Informationen zu Ihrer Person angeben. Die Daten sind zur Zeit nicht öffentlich sichtbar.
 changePicture:
   en: Change profile picture
   de: Profilbild ändern
