--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -29,9 +29,9 @@ memberRoomsHeadline:
   en: Rooms that you are a member of
   de: Räume, in denen Sie Mitglied sind
 noOwnedRooms:
-  en: You have not created any rooms so far.
-  de: Du hast soweit keine Räume erstellt.
+  en: You have not created any rooms yet.
+  de: Sie haben soweit keine Räume erstellt.
 noMemberRooms:
-  en: You are currently not a member in any room. To become a member to a room, you need to be invited by the room owner.
-  de: You are currently not a member in any room. To become a member to a room, you need to be invited by the room owner.
+  en: You are currently not a member in any room. To become a member of a room, you need to be invited by the room owner.
+  de: Sie sind zur Zeit Mitglied von keinen Räume. Um Räume-Mitglied zu werden, muss den Raum-Eigentümer Ihnen eine Einladung schicken.
 
