--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -393,3 +393,9 @@ question:
 answer:
   en: Answer
   de: Antwort
+deletedRoom:
+  en: Deleted room
+  de: Gelöschter Raum
+deletedLesson:
+  en: Deleted lesson
+  de: Gelöschte Einheit
