EDU-647 Correct translations

--- a/src/components/news-tab.yml
+++ b/src/components/news-tab.yml
@@ -3,7 +3,7 @@ info:
   de: Hier finden Sie Neuigkeiten über die Website und Ihre letzten Aktivitäten.
 latestActivitiesHeader:
   en: Your latest activities
-  de: Deine letzten Aktivitäten
+  de: Ihre letzten Aktivitäten
 documentCreatedActivity:
   en: New document created
   de: Neues Dokument erstellt
