--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -21,4 +21,4 @@ storageTabInfo:
   de: Hier finden Sie Details über Ihren Speicherplan und Ihre aktuelle Speichernutzung.
 noStoragePlan:
   en: There is no storage plan associated with your account.
-  de: Keiner Speicherplan ist mit Ihrem Konto verbunden.
+  de: Mit Ihrem Konto ist kein Speicherplan verbunden.
