EDU-636 Also make sure deleted documents are respected in latest activities and favorites

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -393,6 +393,9 @@ question:
 answer:
   en: Answer
   de: Antwort
+deletedDocument:
+  en: Deleted document
+  de: Gelöschtes Dokument
 deletedRoom:
   en: Deleted room
   de: Gelöschter Raum
