EDU-635 Support leave room option

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -61,3 +61,6 @@ removeMember:
 revokeInvitation:
   en: Revoke invitation
   de: Einladung widerrufen
+leaveRoom:
+  en: Leave room
+  de: Raum verlassen
