--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -25,6 +25,9 @@ deleteRoomMemberConfirmation:
 deleteRoomInvitationConfirmation:
   en: Do you really want revoke room invitation send to "{invitationEmail}"?
   de: Möchten Sie die Raumeinladung für "{invitationEmail}" wirklich widerrufen?
+leaveRoomConfirmation:
+  en: Do you really want to leave room "{roomName}"?
+  de: Möchten Sie den Raum "{roomName}" wirklich verlassen?
 deleteLessonConfirmation:
   en: Do you really want to delete lesson "{lessonName}"?
   de: Möchten Sie die Einheit "{lessonName}" wirklich löschen?
