EDU-694 Group settings tab cards into collapsibles

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -43,3 +43,6 @@ licenseHeader:
 lastExecution:
   en: Last execution
   de: Letzte Ausführung
+dataMigration:
+  en: Data migration
+  de: Datenmigration
