EDU-649 Open plugin help modal on help button click

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -46,6 +46,6 @@ dataMigrationHeader:
 lastExecution:
   en: Last execution
   de: Letzte Ausführung
-pluginsHelptextsHeader:
-  en: Plugins helptexts
+pluginsHelpTextsHeader:
+  en: Plugins help texts
   de: Plugins-Hilfetexte
