EDU-649 Improve header text

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -47,5 +47,5 @@ lastExecution:
   en: Last execution
   de: Letzte Ausführung
 pluginsHelpTextsHeader:
-  en: Plugins help texts
-  de: Plugins-Hilfetexte
+  en: Help texts for plugins
+  de: Hilfetexte für Plugins
