EDU-661 Support user own account deletion

--- a/src/components/account-tab.yml
+++ b/src/components/account-tab.yml
@@ -4,9 +4,6 @@ info:
 credentialsHeadline:
   en: Credentials
   de: Zugangsdaten
-deleteAccountHeadline:
-  en: Delete account
-  de: Konto löschen
 resetPassword:
   en: Reset password
   de: Kennwort wiederherstellen
@@ -16,9 +13,9 @@ updateSuccessMessage:
 passwordResetEmailSent:
   en: The password reset link has been sent to {email}
   de: Der Link zum Zurücksetzen des Kennworts wurde an {email} gesendet
-deleteAccountDetails:
+closeAccountDetails:
   en: All documents, public rooms and publicly uploaded resources will remain on the website and your username will be displayed as the collaborator. All other data (personal information, private rooms and privately uploaded resources) will be removed. You will no longer be able to log into the platform.
   de: All documents, public rooms and publicly uploaded resources will remain on the website and your username will be displayed as the collaborator. All other data (personal information, private rooms and privately uploaded resources) will be removed. You will no longer be able to log into the platform.
-deleteAccount:
-  en: Delete account
-  de: Konto löschen
+closeAccount:
+  en: Close account
+  de: Konto schließen
