--- a/src/components/account-tab.yml
+++ b/src/components/account-tab.yml
@@ -14,8 +14,8 @@ passwordResetEmailSent:
   en: The password reset link has been sent to {email}
   de: Der Link zum Zurücksetzen des Kennworts wurde an {email} gesendet
 closeAccountDetails:
-  en: All documents, public rooms and publicly uploaded resources will remain on the website and your username will be displayed as the collaborator. All other data (personal information, private rooms and privately uploaded resources) will be removed. You will no longer be able to log into the platform.
-  de: All documents, public rooms and publicly uploaded resources will remain on the website and your username will be displayed as the collaborator. All other data (personal information, private rooms and privately uploaded resources) will be removed. You will no longer be able to log into the platform.
+  en: All your public contributions (documents, public rooms, files uploaded to the public storage) will remain on the website and your username will still be displayed as author or contributor. All other data (personal information, private rooms and files uploaded to the private storage) will be removed. You will no longer be able to log into the website.
+  de: Alle Ihre öffentlichen Beiträge (Dokumente, öffentliche Räume und Dateien, die Sie in den öffentlichen Speicher hochgeladen haben), bleiben auf der Website. Ihr Benutzername wird weiterhin als Autor oder Bearbeiter angezeigt. Alle anderen Daten (persönliche Informationen, private Räume und Dateien, die Sie in den privaten Speicher hochgeladen haben), werden gelöscht. Sie können sich dann nicht mehr auf der Website anmelden.
 closeAccount:
   en: Close account
   de: Konto schließen
