--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -72,4 +72,4 @@ confirmPublicUploadLiability:
   de: Sie sind dabei, eine Datei in den öffentlichen Bereich zu speichern. Bitte beachten Sie, dass Sie eine Datei im öffentlichen Bereich nach dem Upload nicht mehr löschen können und dass Sie für alle Rechtsverstöße in Ihrer Datei von den Rechteinhabern ggf. persönlich verantwortlich gemacht werden können.
 closeAccountConfirmation:
   en: Do you really want to close your account?
-  de: Möchten Sie wicklich Ihr Konto schließen?
+  de: Möchten Sie wirklich Ihr Konto schließen?
