EDU-639 Add randomised tests icon

--- a/src/plugins/quick-tester/quick-tester.yml
+++ b/src/plugins/quick-tester/quick-tester.yml
@@ -22,3 +22,6 @@ testNumber:
 addTest:
   en: Add test
   de: Test hinzufügen
+randomizedTests:
+  en: The tests are randomised
+  de: Die Tests sind randomisiert
